feat: implement imporoved rights system
