# src/features/section/model/index.ts
@@ -1,6 +1,6 @@
 import {
     SectionMultiPageResponseDto,
-    SectionResponseDto,
+    SectionResponseDto, SectionRightsDto,
     ShortSectionResponseDto,
     ShortTopicResponseDto
 } from "../../../api/Api";
@@ -34,14 +34,26 @@ export const mapSectionMultiPage = (dto: SectionMultiPageResponseDto): SectionMu
     topics: dto.topics!.map(mapTopic),
 })
 
+export type SectionRights = {
+    canCreateSubsections: boolean;
+    canCreateTopics: boolean;
+}
+
+export const mapSectionRights = (dto: SectionRightsDto): SectionRights => ({
+    canCreateSubsections: dto.canCreateSubsections!,
+    canCreateTopics: dto.canCreateTopics!
+})
+
 export type SectionWithSubsections = Section & {
-    parent: Section | null
-    page: SectionMultiPage
+    parent: Section | null;
+    page: SectionMultiPage;
+    rights: SectionRights
 }
 
 export const mapSectionWithSubsections = (dto?: SectionResponseDto): SectionWithSubsections => ({
     id: dto?.id || -1,
     name: dto?.name || "",
     parent: dto?.parent ? mapSection(dto.parent) : null,
-    page: mapSectionMultiPage(dto!.page!)
+    page: mapSectionMultiPage(dto!.page!),
+    rights: mapSectionRights(dto?.rights!)
 })
